# bsdf

./: .gitignore  .gitlab-ci.yml  BACKGROUND.md  CLI.md  COMPARISON.md  CONTRIBUTING.md  EXTENSIONS.md  LICENSE  README.md  SPEC.md  STANDARD_CONVERTERS.md  tasks.py
_data/: generate.py
_docs/: .docrequirements.txt  README.md  conf.py  pages.py
_tools/: README.md  datagen.py  pages.py  testservice.py  versions.py
data/: generate.py
exp/: README.md  zon2.py  zon4.py
javascript/: README.md  bsdf.js  tasks.py  test_speed.html  test_unit.js  testservice_runner.js
js/: README.md  bsdf.js  test_speed.html  test_speed.js
julia - todo/: README.md
matlab/: Bsdf.m  README.md  bsdf.m  service_runner.m  ssdf.m  tasks.py  test_unit.m  testservice_runner.m
matlab/jsonlab/: README.md  loadjson.m  savejson.m
py/: README.md  benchmark.py  bsdf.py  bsdf_test_service.py  generate.py  service_runner.py  tasks.py  test_main.py  test_speed.py  test_unit.py  testservice_runner.py
py_lite/: README.md  bsdf_lite.py  tasks.py  testservice_runner.py
python/: README.md  benchmark.py  bsdf.py  bsdf_cli.py  bsdf_example_python.ipynb  bsdf_test_service.py  pyproject.toml  setup.py  tasks.py  test_cli.py  test_more.py  test_unit.py  testservice_runner.py
python_lite/: README.md  bsdf_lite.py  tasks.py  test_unit.py
r - todo/: README.md
