[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "bsdf"

author = "Almar Klein"
author-email = "almar.klein@gmail.com"
home-page = "http://bsdf.io"
keywords = "format serialize encode binary json hdf5"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
]

[tool.flit.scripts]
bsdf = "bsdf_cli:main"
